--- a/index4.html
+++ b/index4.html
@@ -37,7 +37,7 @@
 	</div>
 	<div class="collapse navbar-collapse" id="myNavbar">
 		<ul class="nav navbar-nav navbar-right">
-			<li><a href="index1.html">Python</a></li>
+			<li><a href="index.html">Python</a></li>
 			<li><a href="index2.html">VBA</a></li>
 			<li><a href="index3.html">SQL</a></li>
 			<li class="active"><a href="#top">About</a></li>
