--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>                   
 	  </button>
-	  <a class="navbar-brand" href="index1.html"><img src="img/logo/logo_pj_white_medium.png" onmouseover="this.src='img/logo/logo_pj_pink_medium.png'" onmouseout="this.src='img/logo/logo_pj_white_medium.png'" alt="www.piotrjanus.tableau.com"/></a>
+	  <a class="navbar-brand" href="index.html"><img src="img/logo/logo_pj_white_medium.png" onmouseover="this.src='img/logo/logo_pj_pink_medium.png'" onmouseout="this.src='img/logo/logo_pj_white_medium.png'" alt="www.piotrjanus.tableau.com"/></a>
 	</div>
 	<div class="collapse navbar-collapse" id="myNavbar">
 		<ul class="nav navbar-nav navbar-right">
