--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
 				<div id="top" class="">			
 					<div id="climatechangepl">
 						<h1>Climate change in Poland</h1>
-						<h3>31.01.2020 | urllib.request, BeautifulSoup, pandas, zipfile, io, matplotlib, numpy</h3>			
-						<h2>Get year list.</h2>
+						<h3>31.01.2020 | urllib.request, BeautifulSoup, pandas, zipfile, io, matplotlib, numpy</h3>
+						<h2>Winter 2020 in Wasarw was warm as never before. There was no snow and the temperatures above 10°C happened more than once. Global warming has become a fact.</h2>
+						<h2>That inspired me to compare average yearly temperatures in different places of Poland starting from the 50s of the 20th century. The yearly temperatures are calculated as an average of daily avergage temperatures.</h2>
+						<h2>The source of the data is Polish Institute of Meteorology and Water Management - National Research Institute which is an official body to collect climate data in Poland.</h2>
+						<h2>As a first step let's get year list.</h2>
 						<div class="macroinner">
 							<h6>from urllib.request import urlopen</h6>
 							<h6>from bs4 import BeautifulSoup</h6>
