--- a/index4.html
+++ b/index4.html
@@ -66,8 +66,8 @@
 					<br class="hidden-xs"/>
 					<p>Welcome!</p>
 					<p>My name is Piotr.</p>
-					<p>I have a master degree in Geography and Economics. Most of my professional career I was involved in reporting in a banking and HR area. Currently I work as a business intelligence (Tableau) developer in a major real estate company.</p>
-					<p>My interests go beyond data visualization. That is why I created the website where I can publish and share my projects coded in Python, VBA or SQL. Most of them were inspired by real-life, professional challenges and some done just for fun.</p>	
+					<p>I have a master degree in Geography and Economics. In my professional career I have been responsible for reporting, mostly in the banking and HR areas. I currently work as a business intelligence (Tableau) developer in a major real estate company.</p>
+					<p>My interests go beyond data visualization. That is why I have created the website where I can publish and share my projects coded in Python, VBA or SQL. Most of them were inspired by real-life, professional challenges and some were done just for fun.</p>	
 					<p>The Python part of the website displays my recent projects that involve mostly web-scraping excercises, data manipulation in Python and visualization in Tableau. The VBA part is a code collection that I created and used when working as a VBA developer. The SQL part is a course for beginner and intermediate SQL users. It helped me systemize my SQL knowledge.</p>
 					<br>
 					<a href="https://pl.linkedin.com/in/januspiotr"><img src="img/logo/outlook_pink.png" align="right" style="margin-right: 0px; margin-left: 35px; padding-top: px;"></a>
